# yak

./: CMakeLists.txt  README.md
input/: circle_2d_multiquadric.xml  circle_2d_multiquadric.xml.out  dfem_flat.xml.out  dfem_large.xml  dfem_large.xml.out  flat_square.xml  multiquadric_medium.xml  multiquadric_medium.xml.out  pincell_diffusion.xml  pincell_diffusion.xml.out  pincell_eigenvalue.xml.out  pincell_multiquadric.xml  pincell_multiquadric.xml.out  rbf_flat.xml  rbf_flat.xml.out  rbf_flat_local.xml  rbf_flat_local.xml.out  slab_1d_diffusion.xml.out  slab_1d_dsa.xml  slab_1d_eigenvalue_dfem.xml  slab_1d_eigenvalue_dfem.xml.out  slab_1d_multiquadric.xml  slab_1d_multiquadric.xml.out  slab_2d_eigenvalue_diffusion.xml.out  slab_2d_multiquadric.xml  slab_2d_multiquadric.xml.out  sphere_3d_diffusion.xml  sphere_3d_multiquadric.xml  sphere_3d_multiquadric.xml.out  test_dfem.xml  test_dfem.xml.out  test_dfem_krylov.xml  test_dfem_krylov.xml.out  test_rbf.xml  test_rbf.xml.out  test_rbf_krylov.xml  test_rbf_krylov.xml.out  test_rbf_krylov_local.xml  test_rbf_krylov_local.xml.out  yak.80s-10638,flux-login3.arc-ts.umich.edu.btr  (+8 more)
input/big_pincell/: run_tests.py  template.xml
input/big_pincell/mcnp/: big_pincell.inp  outp
input/cylinder_reactor/: circle_2d_multiquadric.xml.out
input/flat/: flat_square.xml.out
input/monoenergetic_homogeneous/: output.txt  template.xml
input/monoenergetic_homogeneous/io/: pin_0.05_0.11_0.xml  pin_0.05_0.11_1.xml  pin_0.05_0.12_0.xml  pin_0.05_0.12_1.xml  pin_0.05_0.13_0.xml  pin_0.05_0.13_1.xml  pin_0.05_0.14_0.xml  pin_0.05_0.14_1.xml  pin_0.05_0.15_0.xml  pin_0.05_0.15_1.xml  pin_0.05_0.16_0.xml  pin_0.05_0.16_1.xml  pin_0.05_0.17_0.xml  pin_0.05_0.17_1.xml  pin_0.05_0.18_0.xml  pin_0.05_0.18_0.xml.out  pin_0.05_0.18_1.xml  pin_0.05_0.18_1.xml.out  pin_0.05_0.19_0.xml  pin_0.05_0.19_0.xml.out  pin_0.05_0.19_1.xml  pin_0.05_0.19_1.xml.out  pin_0.05_0.1_0.xml  pin_0.05_0.1_1.xml  pin_0.05_0.21_0.xml  pin_0.05_0.21_0.xml.out  pin_0.05_0.21_1.xml  pin_0.05_0.21_1.xml.out  pin_0.05_0.22_0.xml  pin_0.05_0.22_0.xml.out  pin_0.05_0.22_1.xml  pin_0.05_0.22_1.xml.out  (+248 more)
input/old/: dfem_flat.xml  dfem_flat_krylov.xml  dfem_flat_krylov.xml.out  rbf_flat.xml  rbf_flat.xml.out  test_dfem_krylov.xml  test_dfem_krylov.xml.out  test_rbf.xml  test_rbf_krylov.xml
input/pincell/: pincell_eigenvalue.xml  pincell_eigenvalue.xml.out  pincell_eigenvalue_diffusion.xml  pincell_eigenvalue_diffusion.xml.out  pincell_multiquadric.xml
input/reflected_pincell/: output.txt  run_tests.py  template.xml
input/shape_eigen/: output.txt  output_old1.txt  plot_data.txt  plot_shape.py  shape.py  template.xml
input/slab_reactor/: multiquadric_medium.xml  slab_1d_diffusion.xml  slab_1d_dsa.xml.out  slab_1d_eigenvalue_dfem.xml.out  slab_1d_eigenvalue_diffusion.xml  slab_1d_eigenvalue_diffusion.xml.out  slab_1d_eigenvalue_rbf.xml  slab_1d_eigenvalue_rbf.xml.out  slab_2d_eigenvalue_diffusion.xml  slab_2d_eigenvalue_rbf.xml  slab_2d_eigenvalue_rbf.xml.out  slab_2d_multiquadric.xml
input/sparse_test/: dfem_large.xml.out  gaussian.xml  inverse_multiquadric.xml.out  multiquadric_large.xml  multiquadric_medium.xml
input/sphere_reactor/: sphere_3d_diffusion.xml.out  sphere_3d_multiquadric.xml  sphere_3d_multiquadric.xml.out  sphere_test.xml  sphere_test.xml.out
input/transition_eigen/: pin_0.03_2.0.xml  pin_0.03_2.0.xml.out  pin_0.04_2.0.xml  pin_0.04_2.0.xml.out  pin_0.05_2.0.xml  pin_0.1_2.0.xml  pin_0.2_2.0.xml  pin_0.2_2.0.xml.out  plot_shape.py
input/trilinos_comparison/: amesos.xml  amesos.xml.out  aztec.xml  aztec.xml.out
input/uniform/: circle.xml  circle.xml.out  circle_diffusion.xml  circle_diffusion.xml.out  cube.xml.out  cube_diffusion.xml  cube_diffusion.xml.out  slab.xml.out  slab_dfem.xml  slab_dfem.xml.out  slab_diffusion.xml.out  sphere.xml  sphere.xml.out  sphere_diffusion.xml  square.xml.out  square_diffusion.xml.out
input/uniform_eigen/: cube.xml  cube_diffusion.xml  slab.xml  slab_dfem.xml  slab_dfem.xml.out  slab_diffusion.xml  slab_diffusion.xml.out  sphere_diffusion.xml.out  sphere_old.xml.out  square.xml  square_diffusion.xml  square_diffusion.xml.out
input/uniform_steady/: slab_diffusion_dsa.xml  slab_diffusion_dsa.xml.out  slab_dsa.xml  slab_dsa.xml.out  slab_dsa_1g.xml  slab_dsa_1g.xml.out
lib/: gauss_legendre.c  gauss_legendre.cpp  gauss_legendre.hpp  quadrule.cpp  sphere_lebedev_rule.cpp
main/: Yak.cc
sample/: CMakeLists.txt.brew  CMakeLists.txt.flux
scripts/: plot_flux_2d.py  plot_flux_from_origin.py  plot_points_2d.py  plot_points_3d.py
src/: #Moment_To_Discrete.hh#  #RBF.cc#  #RBF.hh#  .#Moment_To_Discrete.hh  .#RBF.cc  .#RBF.hh  Angular_Discretization.cc  Angular_Discretization.hh  Angular_Discretization_Parser.cc  Angular_Discretization_Parser.hh  Augmented_Operator.cc  Augmented_Operator.hh  Axis_Line.hh  Check.cc  Check.hh  Circle.cc  Circle.hh  Cylinder.cc  Cylinder.hh  DFEM_Sweep.cc  DFEM_Sweep.hh  DFEM_Sweep_1D.cc  DFEM_Sweep_1D.hh  Dense_Solve.cc  Dense_Solve.hh  Discrete_To_Moment.cc  Discrete_To_Moment.hh  Driver.cc  Driver.hh  Energy_Discretization.cc  Energy_Discretization.hh  Energy_Discretization_Parser.cc  Energy_Discretization_Parser.hh  Epetra_Operator_Interface.cc  Epetra_Operator_Interface.hh  Finite_Element.cc  Finite_Element.hh  Finite_Element_Mesh.cc  Finite_Element_Mesh.hh  Fission.cc  (+112 more)
test/: test_geometry.xml  tst_amesos.cc  tst_geometry.cc  tst_moment_discrete.cc
(+3109 files in other folders)
